# hunter-backend

./: .gitignore  CHANGELOG.md  DECISIONS.md  Dockerfile  FRONTEND_ALIGNMENT.md  Procfile  README.md  config.example.yaml  nixpacks.toml  pyproject.toml  supabase_migration_add_frontend_fields.sql  supabase_migration_add_raw_data.sql  supabase_migration_add_source_url_unique.sql  supabase_migration_archive_by_age.sql  supabase_migration_source_archive.sql  supabase_migration_storage_listing_images.sql  supabase_schema.sql
.taskmaster/: README.md  TASKMASTER.md
docs/: APIFY_INTEGRATION_CHECKLIST.md  APIFY_WEBHOOK_FLOW.md  ARCHIVE_RULES_PLAN.md  BACKEND_SCRAPER_TIMEOUT.md  DATA_IN_DB_NOT_IN_APP.md  DATE_NOT_RENDERING.md  DOCUMENTATION.md  FACEBOOK_REAL_ESTATE_FILTER.md  FILTERS.md  FRONTEND_API_RUN_PROXY.md  FRONTEND_HYDRATION_CHECKLIST.md  FRONTEND_RENDER_SNIPPET.md  IMAGE_DOWNLOAD.md  KOMMORNIK_SEARCH_CRITERIA.md  PRICE_EXTRACTION_PLAN.md  RAILWAY_CRON_FULL_SCRAPE.md  SCORING_HUNTER.md  SCRAPER_IMPROVEMENT_PLAN.md  SOURCE_ARCHIVE.md  TITLE_EXTRACTION_PLAN.md
src/hunter/: __init__.py  apify_facebook.py  cli.py  config.py  http_utils.py  image_downloader.py  investment_score.py  logging_config.py  price_fallback.py  price_parser.py  run.py  scheduler.py  schema.py  supabase_client.py  title_extractor.py  webhook_server.py
src/hunter/scrapers/: __init__.py  amw.py  common.py  elicytacje.py  gratka.py  komornik.py  olx.py  otodom.py
tests/: __init__.py  test_amw.py  test_apify_facebook.py  test_investment_score.py  test_title_extractor.py
